# rankode

./: .gitignore  .mcp.json  .stignore  Cargo.toml  README.md  flake.nix
.stfolder/: syncthing-folder-699380.txt
migrations/: 1_init.sql  2_notify_dry_run.sql
src/: cli.rs  main.rs
src/application/: catch_up.rs  delete_source.rs  mod.rs  notify_next_candidate.rs  process_approval.rs  process_discovered.rs  process_fetched.rs  scan_folder.rs  transcode_file.rs  watch_approval.rs  watch_events.rs
src/domain/: error.rs  mod.rs  ports.rs
src/domain/event/: approval_signal.rs  domain_event.rs  mod.rs  worker_signal.rs
src/domain/file/: codec.rs  mod.rs  resolution.rs  status.rs  transcode.rs  value_objects.rs  video_properties.rs
src/domain/models/: candidate.rs  catch_up.rs  decision.rs  event.rs  library_item.rs  media_file.rs  mod.rs  report.rs  transcoded.rs
src/domain/services/: mod.rs  process_discovered.rs  process_fetched.rs  scan_folder.rs  take_decision.rs  watch_events.rs
src/infra/: config.rs  mod.rs
src/infra/ffmpeg/: encoder.rs  error.rs  mod.rs  models.rs  probe.rs  transcoder.rs
src/infra/ffprobe/: error.rs  mapping.rs  mod.rs  output.rs  probe.rs
src/infra/http/: error.rs  mod.rs  models.rs  radarr.rs
src/infra/listener/: error.rs  mod.rs  models.rs  postgres_listener.rs
src/infra/mcp/: handler.rs  server.rs
src/infra/mqtt/: client.rs  entity_publisher.rs  error.rs  listener.rs  mapping.rs  mod.rs  notifier.rs
src/infra/repository/: candidate.rs  catch_up.rs  error.rs  event.rs  library_item.rs  media_file.rs  mod.rs  models.rs  (+2 more)
(+4 files in other folders)
