[package]
name = "rankode"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "migrate", "json", "time"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
time = "0.3"
anyhow = "1.0.102"
futures = "0.3"
tracing = { version = "0.1", features = ["attributes"]}
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
